welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: ';' expected but 'if' found.
	} if (weekday && !vacation){
          ^