welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (vacation==true) { 
		return true
	} if (weekday && !vacation){
		return false
	} 
	
}
